完成首页数据加载

--- a/main.construction.cn/src/main/res/values/strings.xml
+++ b/main.construction.cn/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="appmain_app_name">main.construction.cn</string>
+    <string name="appmain_no_load_more">加载完了</string>
 </resources>
