--- a/commonlibrary/src/main/res/values/strings.xml
+++ b/commonlibrary/src/main/res/values/strings.xml
@@ -2,4 +2,9 @@
     <string name="app_name">CommmonLibrary</string>
     <string name="send_code_msg">获取验证码</string>
     <string name="get_code_msg_again">重新获取</string>
+    <string name="no_net">没有网络</string>
+    <string name="LoadMoreView_loadingHint">加载中...</string>
+    <string name="LoadMoreView_completeHint">查看更多</string>
+    <string name="LoadMoreView_errorHint">加载失败，点击重新加载</string>
+    <string name="LoadMoreView_noMoreHint">没有更多了~</string>
 </resources>
